# dashboard_home_env

./: .gitignore  CMakeLists.txt  LICENSE.txt  MacOSXBundleInfo.plist.in  README.txt  main.cpp
resources/: HomeEnvDashboardIcon.icns  resources.rc
src/: CMakeLists.txt  environemental_data.cpp  environemental_data.hpp  main.cpp  ogl_widget.cpp  ogl_widget.hpp  rest_api_interface.cpp  rest_api_interface.hpp
